# monorepo

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  typos.toml
app/: .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 20251029_000001_create_users_table.py
app/src/: config.py  db.py  main.py  models.py  schemas.py  security.py
client/: .gitignore  Dockerfile  Dockerfile.dev  entrypoint.sh  index.html  package-lock.json  package.json  vite.config.ts
client/src/: SignIn.tsx  config.ts  index.tsx
client/src/components/: ForgotPassword.tsx
client/src/theme/: AppTheme.tsx  ColorModeIconDropdown.tsx  ColorModeSelect.tsx  themePrimitives.ts
client/src/theme/customizations/: dataDisplay.tsx  feedback.tsx  inputs.tsx  navigation.tsx  surfaces.ts
docker/confs/: postgresql.conf
docker/confs/nginx/: nginx.conf
docker/confs/nginx/sites/: client.conf
scripts/: envsubst.sh
