[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.13.3",
    "pydantic[email]>=2.8.2",
    "pydantic-settings>=2.6.1",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.1",
    "fastapi>=0.120.2",
]
